package han.triptop.groepB3.model;

public enum ActivityType {
    FLIGHT,
    HOTEL,
    RESTAURANT,
    RENTAL,
    CRUISE,
    CAR
} 